<?xml version="1.0" encoding="utf-8"?>
<!--
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->
<resources>

    <!-- App name -->
    <string name="app_name">MetaWatch Locale Plug-in</string>

    <!-- Name of the plug-in that appears in Locale -->
    <string name="plugin_name">MetaWatch</string>
    
        
    <!-- notification radio label -->
    <string name="notification_label">Notification</string>
    
    <!-- widget radio label -->
    <string name="widget_label">Widget</string>
    
    <!-- sleepmode radio label -->
    <string name="silent_label">Silent Mode</string>
    
    <!-- sleepmode checkbox label -->
    <string name="silent_checkbox">Silent mode enabled?</string>
    

    <!-- Hint text in the message edit text -->
    <string name="message_hint">MetaWatch notification message</string>
    
    <!-- Hint text in the title edit text -->
    <string name="title_hint">MetaWatch notification title</string>
    
    <!-- Label for the sticky checkbox -->
    <string name="sticky_label">Sticky notification</string>
    
    <!-- Hint text in the message edit text -->
    <string name="id_hint">widget unique id</string>
    
    <!-- Hint text in the title edit text -->
    <string name="value_hint">widget text</string>
    
    <!-- Label for the vibrate pattern checkbox -->
    <string name="vibrate_label">Vibrate</string>
    
    <string name="vibrate_on">on</string>
    <string name="vibrate_off">off</string>
    <string name="vibrate_cycles">cycles</string>

</resources>