<?xml version="1.0" encoding="utf-8"?>
<!--
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
<<<<<<< HEAD
** limitations under the License.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/group1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/notification_label" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/text2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="8dip"
                    android:hint="@string/title_hint" />
                
                <EditText
                    android:id="@+id/text1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="8dip"
                    android:hint="@string/message_hint" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
 	 	           android:text="@string/sticky_label" 	 	
            android:checked="true" />

            </LinearLayout>
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/widget_label" />
            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:orientation="vertical" >
                
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/text3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="8dip"
                    android:hint="@string/id_hint" />

                <EditText
                    android:id="@+id/text4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="8dip"
                    android:hint="@string/value_hint" />
            </LinearLayout>
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/silent_label" />
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:text="@string/silent_checkbox" />


            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/vibrate_label" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp" >

                <EditText
                    android:id="@+id/edit_vib_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/vibrate_on"
                    android:inputType="number"
                    android:value="250" />

                <EditText
                    android:id="@+id/edit_vib_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/vibrate_off"
                    android:inputType="number"
                    android:value="50" />

                <EditText
                    android:id="@+id/edit_vib_cycles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/vibrate_cycles"
                    android:inputType="number"
                    android:value="1" />
            </LinearLayout>
	</RadioGroup>
        
    </ScrollView>

</LinearLayout>